Aplicar técnicas de amostragem

--- a/Aula_02/tecnicas_amostragem.ipynb
+++ b/Aula_02/tecnicas_amostragem.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,38 +20,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [],
    "source": [
     "dataset = pd.read_csv('census.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset.tail()"
    ]
   },
   {
@@ -63,34 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_amostra_aleatoria_simples = dataset.sample(n = 100, random_state = 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_amostra_aleatoria_simples.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_amostra_aleatoria_simples.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,21 +54,118 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "df_amostra_aleatoria_simples.shape"
+    "Amostragem sistemática"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 272,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_amostra_aleatoria_simples.head()"
+    "def amostragem_sistematica(dataset, amostras):\n",
+    "    intervalo = len(dataset) // amostras\n",
+    "\n",
+    "    random.seed(1)\n",
+    "    inicio = random.randint(0, intervalo)\n",
+    "\n",
+    "    indices = np.arange(inicio, len(dataset), step = intervalo)\n",
+    "\n",
+    "    return dataset.iloc[indices]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 273,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_amostra_sistematica = amostragem_sistematica(dataset, 100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Amostragem por grupos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 274,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def amostragem_agrupamento(dataset, numero_grupos):\n",
+    "    intervalo = len(dataset) / numero_grupos\n",
+    "\n",
+    "    grupos = []\n",
+    "    id_grupo = 0\n",
+    "    contagem = 0\n",
+    "    for _ in dataset.iterrows():\n",
+    "        grupos.append(id_grupo)\n",
+    "        contagem += 1\n",
+    "        if contagem > intervalo:\n",
+    "            contagem = 0\n",
+    "            id_grupo += 1\n",
+    "\n",
+    "    dataset['grupo'] = grupos\n",
+    "    random.seed(1)\n",
+    "    grupo_selecionado = random.randint(0, numero_grupos)\n",
+    "\n",
+    "    return dataset[dataset['grupo'] == grupo_selecionado]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 275,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_amostra_agrupamento = amostragem_agrupamento(dataset, 325)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Amostra estratificada"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 276,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import StratifiedShuffleSplit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 277,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def amostragem_estratificada(dataset, percentual):\n",
+    "    split = StratifiedShuffleSplit(test_size = percentual, random_state = 1)\n",
+    "    \n",
+    "    for _, y in split.split(dataset, dataset['income']):\n",
+    "        df_y = dataset.iloc[y]\n",
+    "    \n",
+    "    return df_y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 278,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_amostra_estratificada = amostragem_estratificada(dataset, 0.0030711587481956942)"
    ]
   }
  ],
