Adicionar limites inferior e superior

--- a/Aula_03/estatistica_descritiva.ipynb
+++ b/Aula_03/estatistica_descritiva.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -49,6 +49,46 @@
     "largura_da_classe = math.ceil(amplitute_total / numero_de_classes)\n",
     "\n",
     "print(largura_da_classe)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[101, 113, 125, 137, 149]\n"
+     ]
+    }
+   ],
+   "source": [
+    "limite_inferior = [menor_numero]\n",
+    "\n",
+    "for x in range(1, numero_de_classes):\n",
+    "    limite_inferior.append((limite_inferior[x - 1] + largura_da_classe))\n",
+    "\n",
+    "print(limite_inferior)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[112, 124, 136, 148, 160]\n"
+     ]
+    }
+   ],
+   "source": [
+    "limite_superior = [x + 11 for x in limite_inferior]\n",
+    "print(limite_superior)"
    ]
   }
  ],
