Iniciar calculo frequencia

--- a/Aula_03/estatistica_descritiva.ipynb
+++ b/Aula_03/estatistica_descritiva.ipynb
@@ -90,6 +90,29 @@
     "limite_superior = [x + 11 for x in limite_inferior]\n",
     "print(limite_superior)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[101, 108, 111, 114, 116, 117, 118, 119, 119, 120, 120, 123, 123, 124, 127, 127, 128, 131, 131, 132, 135, 139, 139, 150, 157]\n"
+     ]
+    }
+   ],
+   "source": [
+    "conjunto = [108, 139, 120, 123, 120, 132, 123, 131, 131, 157, 150, 124, 111, 101, 135, 119, 116, 117, 127, 128, 139, 119, 118, 114, 127]\n",
+    "conjunto.sort()\n",
+    "frequencia = []\n",
+    "\n",
+    "for x in limite_inferior:\n",
+    "    for y in conjunto:\n",
+    "        "
+   ]
   }
  ],
  "metadata": {
