--- a/Aula_03/estatistica_descritiva.ipynb
+++ b/Aula_03/estatistica_descritiva.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -93,25 +93,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[101, 108, 111, 114, 116, 117, 118, 119, 119, 120, 120, 123, 123, 124, 127, 127, 128, 131, 131, 132, 135, 139, 139, 150, 157]\n"
+      "[[101, 108, 111], [114, 116, 117, 118, 119, 119, 120, 120, 123, 123, 124], [127, 127, 128, 131, 131, 132, 135], [139, 139], [150, 157]]\n",
+      "[3, 11, 7, 2, 2]\n"
      ]
     }
    ],
    "source": [
     "conjunto = [108, 139, 120, 123, 120, 132, 123, 131, 131, 157, 150, 124, 111, 101, 135, 119, 116, 117, 127, 128, 139, 119, 118, 114, 127]\n",
     "conjunto.sort()\n",
-    "frequencia = []\n",
+    "conjunto_classe = [[] for _ in range(numero_de_classes)]\n",
     "\n",
-    "for x in limite_inferior:\n",
-    "    for y in conjunto:\n",
-    "        "
+    "for n_conjunto in conjunto:\n",
+    "    for i in range(numero_de_classes):\n",
+    "        if(limite_inferior[i] <= n_conjunto and n_conjunto <= limite_superior[i]):\n",
+    "            conjunto_classe[i].append(n_conjunto)\n",
+    "            break\n",
+    "\n",
+    "frequencia = [len(lista) for lista in conjunto_classe]\n",
+    "\n",
+    "print(frequencia)"
    ]
   }
  ],
