Refatorar tudo para uma classe

--- a/Aula_03/estatistica_descritiva.ipynb
+++ b/Aula_03/estatistica_descritiva.ipynb
@@ -2,123 +2,79 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from dataclasses import dataclass, field\n",
     "import math"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "1. O conjunto de dados abaixo representa uma amostra do número de\n",
-    "minutos que 25 pessoas se exercitam a cada semana.\n",
+    "@dataclass\n",
+    "class Conjunto:\n",
+    "    amostras: list[int]\n",
+    "    numero_de_classes: int\n",
+    "    maior_numero: int = field(init = False)\n",
+    "    menor_numero: int = field(init = False)\n",
+    "    amplitute_total: int = field(init = False)\n",
+    "    largura_da_classe: int = field(init = False)\n",
+    "    limite_inferior: list[int] = field(init = False)\n",
+    "    limite_superior: list[int] = field(init = False)\n",
+    "    frequencia: list[list[int]] = field(init = False)\n",
     "\n",
-    "108 139 120 123 120 132 123 131 131 157 150 124 111 101 135 119 116 117 127 128 139 119 118 114 127"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "1.1. Construa uma distribuição de frequência para o conjunto de dados usando\n",
-    "cinco classes. Inclua os limites de classe, pontos médios, frequências,\n",
-    "frequências relativas e frequências acumuladas."
+    "    def __post_init__(self):\n",
+    "        self.maior_numero = max(self.amostras)\n",
+    "        self.menor_numero = min(self.amostras)\n",
+    "        self.amplitute_total = self.maior_numero - self.menor_numero\n",
+    "        self.largura_da_classe = math.ceil(self.amplitute_total / self.numero_de_classes)\n",
+    "\n",
+    "        self.limite_inferior = [self.menor_numero]\n",
+    "        for i in range(1, self.numero_de_classes):\n",
+    "            self.limite_inferior.append(self.limite_inferior[i - 1] + self.largura_da_classe)\n",
+    "\n",
+    "        self.limite_superior = [n + (self.largura_da_classe - 1) for n in self.limite_inferior]\n",
+    "\n",
+    "        self.frequencia = [[] for _ in range(self.numero_de_classes)]\n",
+    "        amostras_crescente = self.amostras\n",
+    "        amostras_crescente.sort()\n",
+    "        for n_conjunto in amostras_crescente:\n",
+    "            for i in range(self.numero_de_classes):\n",
+    "                if(self.limite_inferior[i] <= n_conjunto and n_conjunto <= self.limite_superior[i]):\n",
+    "                    self.frequencia[i].append(n_conjunto)\n",
+    "                    break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12\n"
+      "12\n",
+      "[101, 113, 125, 137, 149]\n",
+      "[112, 124, 136, 148, 160]\n",
+      "[[101, 108, 111], [114, 116, 117, 118, 119, 119, 120, 120, 123, 123, 124], [127, 127, 128, 131, 131, 132, 135], [139, 139], [150, 157]]\n"
      ]
     }
    ],
    "source": [
-    "maior_numero = 157\n",
-    "menor_numero = 101\n",
-    "numero_de_classes = 5\n",
-    "amplitute_total = maior_numero - menor_numero\n",
-    "largura_da_classe = math.ceil(amplitute_total / numero_de_classes)\n",
+    "amostras1 = [108, 139, 120, 123, 120, 132, 123, 131, 131, 157, 150, 124, 111, 101, 135, 119, 116, 117, 127, 128, 139, 119, 118, 114, 127]\n",
     "\n",
-    "print(largura_da_classe)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[101, 113, 125, 137, 149]\n"
-     ]
-    }
-   ],
-   "source": [
-    "limite_inferior = [menor_numero]\n",
+    "conjunto1 = Conjunto(amostras1, 5)\n",
     "\n",
-    "for x in range(1, numero_de_classes):\n",
-    "    limite_inferior.append((limite_inferior[x - 1] + largura_da_classe))\n",
-    "\n",
-    "print(limite_inferior)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[112, 124, 136, 148, 160]\n"
-     ]
-    }
-   ],
-   "source": [
-    "limite_superior = [x + 11 for x in limite_inferior]\n",
-    "print(limite_superior)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[101, 108, 111], [114, 116, 117, 118, 119, 119, 120, 120, 123, 123, 124], [127, 127, 128, 131, 131, 132, 135], [139, 139], [150, 157]]\n",
-      "[3, 11, 7, 2, 2]\n"
-     ]
-    }
-   ],
-   "source": [
-    "conjunto = [108, 139, 120, 123, 120, 132, 123, 131, 131, 157, 150, 124, 111, 101, 135, 119, 116, 117, 127, 128, 139, 119, 118, 114, 127]\n",
-    "conjunto.sort()\n",
-    "conjunto_classe = [[] for _ in range(numero_de_classes)]\n",
-    "\n",
-    "for n_conjunto in conjunto:\n",
-    "    for i in range(numero_de_classes):\n",
-    "        if(limite_inferior[i] <= n_conjunto and n_conjunto <= limite_superior[i]):\n",
-    "            conjunto_classe[i].append(n_conjunto)\n",
-    "            break\n",
-    "\n",
-    "frequencia = [len(lista) for lista in conjunto_classe]\n",
-    "\n",
-    "print(frequencia)"
+    "print (conjunto1.largura_da_classe)\n",
+    "print (conjunto1.limite_inferior)\n",
+    "print (conjunto1.limite_superior)\n",
+    "print (conjunto1.frequencia)"
    ]
   }
  ],
