--- a/Aula_03/tabela_distribuicao_frequencia/Estatistica_Descritiva_Lista_Exercicios.ipynb
+++ b/Aula_03/tabela_distribuicao_frequencia/Estatistica_Descritiva_Lista_Exercicios.ipynb
@@ -382,7 +382,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 18,
       "metadata": {
         "id": "Fdin50sWM29y"
       },
@@ -422,7 +422,7 @@
               "Name: count, dtype: int64"
             ]
           },
-          "execution_count": 14,
+          "execution_count": 18,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -490,7 +490,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "id": "4XZI_FjDPFsR"
       },
@@ -500,8 +500,7 @@
         "import pandas as pd\n",
         "\n",
         "# importar o csv com dados da BBAS3\n",
-        "df_bbas3 = pd.read_csv(\"https://raw.githubusercontent.com/carlosfab/dsnp2/master/datasets/BBAS3.SA.csv\",\n",
-        "                       index_col=\"Date\")"
+        "df_bbas3 = pd.read_csv(\"https://raw.githubusercontent.com/carlosfab/dsnp2/master/datasets/BBAS3.SA.csv\", index_col=\"Date\")"
       ]
     },
     {
