--- a/Aula_03/tabela_distribuicao_frequencia/Estatistica_Descritiva_Lista_Exercicios.ipynb
+++ b/Aula_03/tabela_distribuicao_frequencia/Estatistica_Descritiva_Lista_Exercicios.ipynb
@@ -382,53 +382,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 19,
       "metadata": {
         "id": "Fdin50sWM29y"
       },
       "outputs": [
         {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/tmp/ipykernel_5102/877944603.py:1: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+            "  ocorrencias_aviacao['ocorrencia_uf'].value_counts()[0]\n"
+          ]
+        },
+        {
           "data": {
             "text/plain": [
-              "ocorrencia_uf\n",
-              "SP     1207\n",
-              "RJ      498\n",
-              "MG      476\n",
-              "PR      437\n",
-              "RS      350\n",
-              "GO      268\n",
-              "PA      255\n",
-              "MT      244\n",
-              "AM      219\n",
-              "BA      208\n",
-              "SC      160\n",
-              "DF      151\n",
-              "MS      132\n",
-              "PE       88\n",
-              "CE       75\n",
-              "ES       66\n",
-              "MA       63\n",
-              "TO       54\n",
-              "AC       53\n",
-              "RR       50\n",
-              "PI       39\n",
-              "RO       30\n",
-              "PB       20\n",
-              "SE       18\n",
-              "AL       16\n",
-              "RN       15\n",
-              "AP       13\n",
-              "***       3\n",
-              "Name: count, dtype: int64"
+              "1207"
             ]
           },
-          "execution_count": 18,
+          "execution_count": 19,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "ocorrencias_aviacao['ocorrencia_uf'].value_counts()"
+        "ocorrencias_aviacao['ocorrencia_uf'].value_counts()[0]"
       ]
     },
     {
@@ -442,37 +421,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 22,
       "metadata": {
         "id": "MZNDxepbNqFr"
       },
       "outputs": [
         {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/tmp/ipykernel_5102/698672515.py:2: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+            "  (df / len(ocorrencias_aviacao['ocorrencia_tipo']))[0]\n"
+          ]
+        },
+        {
           "data": {
             "text/plain": [
-              "ocorrencia_tipo\n",
-              "FALHA DO MOTOR EM VOO                                  0.130952\n",
-              "ESTOURO DE PNEU                                        0.115975\n",
-              "FALHA OU MAU FUNCIONAMENTO DE SISTEMA / COMPONENTE     0.110215\n",
-              "PERDA DE CONTROLE NO SOLO                              0.094470\n",
-              "OUTROS                                                 0.067204\n",
-              "                                                         ...   \n",
-              "CAUSADO POR RICOCHETE                                  0.000192\n",
-              "RELACIONADO COM SECURITY                               0.000192\n",
-              "PERDA DA CONSCIÊNCIA                                   0.000192\n",
-              "ALARME FALSO DE FOGO OU DE SUPERAQUECIMENTO            0.000192\n",
-              "MANOBRA ABRUPTA                                        0.000192\n",
-              "Name: count, Length: 63, dtype: float64"
+              "0.13095238095238096"
             ]
           },
-          "execution_count": 15,
+          "execution_count": 22,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
         "df = ocorrencias_aviacao['ocorrencia_tipo'].value_counts()\n",
-        "df / len(ocorrencias_aviacao['ocorrencia_tipo'])"
+        "(df / len(ocorrencias_aviacao['ocorrencia_tipo']))[0]"
       ]
     },
     {
