--- a/Aula_03/tabela_distribuicao_frequencia/Estatistica_Descritiva_Lista_Exercicios.ipynb
+++ b/Aula_03/tabela_distribuicao_frequencia/Estatistica_Descritiva_Lista_Exercicios.ipynb
@@ -49,7 +49,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "id": "8TpD5o8MLMaV"
       },
@@ -71,7 +71,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {
         "id": "vGsqOw52LnKZ"
       },
@@ -82,7 +82,7 @@
               "(5208, 22)"
             ]
           },
-          "execution_count": 4,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -102,7 +102,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 4,
       "metadata": {
         "id": "MjAmdNplMOMJ"
       },
@@ -135,7 +135,7 @@
               "dtype: object"
             ]
           },
-          "execution_count": 5,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -155,7 +155,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 5,
       "metadata": {
         "id": "e1xx_cXFMaM2"
       },
@@ -331,7 +331,7 @@
               "[3 rows x 22 columns]"
             ]
           },
-          "execution_count": 6,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -351,7 +351,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 6,
       "metadata": {
         "id": "DVtxiIREMnnV"
       },
@@ -362,7 +362,7 @@
               "array(['ACIDENTE', 'INCIDENTE GRAVE', 'INCIDENTE'], dtype=object)"
             ]
           },
-          "execution_count": 9,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -382,32 +382,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 7,
       "metadata": {
         "id": "Fdin50sWM29y"
       },
       "outputs": [
         {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/tmp/ipykernel_5102/877944603.py:1: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
-            "  ocorrencias_aviacao['ocorrencia_uf'].value_counts()[0]\n"
-          ]
-        },
-        {
           "data": {
             "text/plain": [
-              "1207"
+              "ocorrencia_uf\n",
+              "SP    1207\n",
+              "Name: count, dtype: int64"
             ]
           },
-          "execution_count": 19,
+          "execution_count": 7,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "ocorrencias_aviacao['ocorrencia_uf'].value_counts()[0]"
+        "ocorrencias_aviacao['ocorrencia_uf'].value_counts()[:1]"
       ]
     },
     {
@@ -421,33 +415,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 8,
       "metadata": {
         "id": "MZNDxepbNqFr"
       },
       "outputs": [
         {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/tmp/ipykernel_5102/698672515.py:2: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
-            "  (df / len(ocorrencias_aviacao['ocorrencia_tipo']))[0]\n"
-          ]
-        },
-        {
           "data": {
             "text/plain": [
-              "0.13095238095238096"
+              "ocorrencia_tipo\n",
+              "FALHA DO MOTOR EM VOO    0.130952\n",
+              "Name: count, dtype: float64"
             ]
           },
-          "execution_count": 22,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
         "df = ocorrencias_aviacao['ocorrencia_tipo'].value_counts()\n",
-        "(df / len(ocorrencias_aviacao['ocorrencia_tipo']))[0]"
+        "(df / len(ocorrencias_aviacao['ocorrencia_tipo']))[:1]"
       ]
     },
     {
@@ -465,7 +453,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 9,
       "metadata": {
         "id": "4XZI_FjDPFsR"
       },
@@ -489,12 +477,117 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "id": "MlGjWTeXQEB3"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Open</th>\n",
+              "      <th>High</th>\n",
+              "      <th>Low</th>\n",
+              "      <th>Close</th>\n",
+              "      <th>Adj Close</th>\n",
+              "      <th>Volume</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Date</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>2019-05-06</th>\n",
+              "      <td>49.470001</td>\n",
+              "      <td>49.669998</td>\n",
+              "      <td>49.180000</td>\n",
+              "      <td>49.369999</td>\n",
+              "      <td>46.886795</td>\n",
+              "      <td>6314800.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2019-05-07</th>\n",
+              "      <td>49.080002</td>\n",
+              "      <td>49.680000</td>\n",
+              "      <td>48.220001</td>\n",
+              "      <td>49.490002</td>\n",
+              "      <td>47.000763</td>\n",
+              "      <td>10846100.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2019-05-08</th>\n",
+              "      <td>49.500000</td>\n",
+              "      <td>50.840000</td>\n",
+              "      <td>49.500000</td>\n",
+              "      <td>50.590000</td>\n",
+              "      <td>48.045422</td>\n",
+              "      <td>14459600.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2019-05-09</th>\n",
+              "      <td>50.910000</td>\n",
+              "      <td>51.259998</td>\n",
+              "      <td>50.119999</td>\n",
+              "      <td>51.029999</td>\n",
+              "      <td>48.463291</td>\n",
+              "      <td>15377500.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2019-05-10</th>\n",
+              "      <td>51.099998</td>\n",
+              "      <td>51.189999</td>\n",
+              "      <td>49.860001</td>\n",
+              "      <td>50.160000</td>\n",
+              "      <td>47.637051</td>\n",
+              "      <td>8975300.0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                 Open       High        Low      Close  Adj Close      Volume\n",
+              "Date                                                                         \n",
+              "2019-05-06  49.470001  49.669998  49.180000  49.369999  46.886795   6314800.0\n",
+              "2019-05-07  49.080002  49.680000  48.220001  49.490002  47.000763  10846100.0\n",
+              "2019-05-08  49.500000  50.840000  49.500000  50.590000  48.045422  14459600.0\n",
+              "2019-05-09  50.910000  51.259998  50.119999  51.029999  48.463291  15377500.0\n",
+              "2019-05-10  51.099998  51.189999  49.860001  50.160000  47.637051   8975300.0"
+            ]
+          },
+          "execution_count": 10,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df_bbas3.head(5)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -507,12 +600,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "id": "kPSOenAuQj81"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "Open         4.537000e+01\n",
+              "High         4.560000e+01\n",
+              "Low          4.462000e+01\n",
+              "Close        4.560000e+01\n",
+              "Adj Close    4.444867e+01\n",
+              "Volume       7.228200e+06\n",
+              "Name: 2019-10-04, dtype: float64"
+            ]
+          },
+          "execution_count": 12,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df_bbas3.loc['2019-10-04']"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -525,12 +637,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "id": "n-vZleQPEGey"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "13996282.258064516"
+            ]
+          },
+          "execution_count": 17,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df_bbas3['Volume'].sum() / len(df_bbas3['Volume'])"
+      ]
     },
     {
       "cell_type": "markdown",
